Fix button sizing on mobile

--- a/src/styles/Main/index.scss
+++ b/src/styles/Main/index.scss
@@ -109,8 +109,20 @@
     
 }
 
+@media (max-width: 882px) {
+
+}
+
 /* Landscape phones and smaller */
 @media (max-width: 480px) {
+    .disabled-button {
+        padding: 10px 60px !important;
+    }
+
+    .default-button {
+        padding: 10px 60px !important;
+    }
+    
     .description_buttons {
         .default-button {
             margin-bottom: 20px;
